--- a/using_bs5/index.html
+++ b/using_bs5/index.html
@@ -22,6 +22,8 @@
   <!-- BOOTSTRAP 5 AND FONT AWESOME -->
   <link rel="stylesheet" href="css/all.css" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
   <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="css/style.css" />
   <title>PSD to HTML || HTML5 || PS</title>
@@ -35,7 +37,7 @@
     <!-- Navigation bar  -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand .logo-mogo" href="index.html">MoGo</a>
+        <a class="navbar-brand" href="index.html">MoGo</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
           data-target="#mogo-navbar" aria-controls="mogo-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,65 +58,101 @@
             </li>
           </div>
           <form class="d-flex">
-            <button class="btn border-0 me-5 text-white" type="submit">
+            <button type="button" class="btn border-0 me-5 text-light" data-bs-toggle="modal" data-bs-target="#cartModal">
               <i class="fas fa-shopping-cart"></i>
             </button>
-            <input class="form-control me-0 d-none" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn border-0 text-white" type="submit">
+            <!-- CART MODAL -->
+            <div class="modal fade text-dark" id="cartModal" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1" aria-labelledby="cartModal" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="cartModalTitle">Selected Products</h5>
+                    <button type="button" class="close btn" data-bs-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body d-flex flex-row justify-content-between">
+                      <select name="Select" id="Select">
+                        <datalist id="Products">
+                          <option value="product-01">Mogo 01</option>
+                          <option value="product-02">Mogo 02</option>
+                          <option value="product-03">Mogo 03</option>
+                          <option value="product-04">Mogo 04</option>
+                        </datalist>
+                      </select>
+                      <div name="#Products" class="text-dark">$159</div>
+                  </div>
+                  <div class="modal-footer"><button type="button" class="btn btn-success" data-bs-dismiss="modal">Check Out</button></div>
+                </div>
+              </div>
+            </div>
+            <button class="btn border-0 text-white" type="button" data-bs-target="#search" data-bs-toggle="modal">
               <i class="fas fa-search"></i>
             </button>
+            <!-- SEARCH IN MODAL -->
+            <div class="modal fade text-dark" id="search" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1" aria-labelledby="search" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body">
+                      <input type="search" name="Search" id="InputSearch" placeholder="Search here..." class="form-control">
+                      <button type="submit" class="btn btn-info mt-2">search</button>
+                  </div>
+                  <div class="modal-footer"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button></div>
+                </div>
+              </div>
+            </div>
           </form>
         </div>
       </div>
     </nav>
     <!-- Header Area Text with Button -->
     <div class="row">
-      <div class="col col-sm-10 offset-sm-1 col-xxl-8 offset-xxl-2">
+      <div class="col col-md-10 offset-md-1 col-xxl-8 offset-xxl-2">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="header_text text-center pt-5 mt-5">
+              <div class="header_text text-center pt-5 mt-sm-5">
                 <h3 class="mt-5">Creative Template</h3>
                 <h1>Welcome<br />to MoGo</h1>
                 <img src="images/underLine_white.png" alt="line through" class="d-block mx-auto" />
-                <button class="btn text-white border border-3 .learnMore my-5">
+                <button class="btn text-white border border-3 my-5">
                   Learn More
                 </button>
               </div>
             </div><!-- End Item -->
             <div class="carousel-item">
-              <div class="header_text text-center pt-5 mt-5">
+              <div class="header_text text-center pt-5 mt-sm-5">
                 <h3 class="mt-5">We work with</h3>
                 <h1>Story <br> About Us</h1>
                 <img src="images/underLine_white.png" alt="line through" class="d-block mx-auto" />
-                <button class="btn text-white border border-3 .learnMore my-5">
+                <button class="btn text-white border border-3 my-5">
                   Learn More
                 </button>
               </div>
             </div><!-- End carousel-item -->
             <div class="carousel-item">
-              <div class="header_text text-center pt-5 mt-5">
+              <div class="header_text text-center pt-5 mt-sm-5">
                 <h3 class="mt-5">What We dO</h3>
                 <h1>Welcome<br />to MoGo</h1>
                 <img src="images/underLine_white.png" alt="line through" class="d-block mx-auto" />
-                <button class="btn text-white border border-3 .learnMore my-5">
+                <button class="btn text-white border border-3 my-5">
                   Learn More
                 </button>
               </div>
             </div><!-- End carousel-item -->
             <div class="carousel-item">
-              <div class="header_text text-center pt-5 mt-5">
+              <div class="header_text text-center pt-5 mt-sm-5">
                 <h3 class="mt-5">Who we are</h3>
                 <h1>Welcome<br />to MoGo</h1>
                 <img src="images/underLine_white.png" alt="line through" class="d-block mx-auto" />
-                <button class="btn text-white border border-3 .learnMore my-5">
+                <button class="btn text-white border border-3 my-5">
                   Learn More
                 </button>
               </div>
             </div><!-- End carousel-item -->
           </div><!-- End Carousel Inner -->
-          <ul class="slideIndecators nav nav-pills">
+          <ul class="carousel-indicators">
             <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"><a href="#"><span>01</span>ABOUT</a></li>
             <li data-bs-target="#myCarousel" data-bs-slide-to="1"><a href="#"><span>02</span>SERVICE</a>
             </li>
@@ -130,24 +168,26 @@
   <!-- END HOME SECTION -->
   <!-- START ABOUT SECTION -->
   <section id="about-section" class="py-5">
-    <div class="row text-center">
-      <div class="col col-sm-10 offset-1 col-md-8 offset-md-2">
-        <h3 class="header-subtitile">What We dO</h3>
-        <h2 class="mt-1 mb-4 text-uppercase">Story About Us</h2>
-        <img src="images/underLine_yellow.png" alt="lineThrough" class="d-block mx-auto" />
-        <p class="my-4">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-        <div class="row">
-          <div class="col col-md-4 img-fluid"><img src="images/services_01.png" width="100%" alt="services" /></div>
-          <div class="col col-md-4 img-fluid"><img src="images/services_02.png" width="100%" alt="services" /></div>
-          <div class="col col-md-4 img-fluid"><img src="images/services_03.png" width="100%" alt="services" /></div>
+    <div class="row text-center pt-4">
+      <div class="row me-0 pe-0 ms-0 ps-0">
+        <div class="col col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+          <h3 class="header-subtitile">What We dO</h3>
+          <h2 class="mt-1 mb-4 text-uppercase">Story About Us</h2>
+          <img src="images/underLine_yellow.png" alt="lineThrough" class="d-block mx-auto" />
+          <p class="my-4">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <div class="row">
+            <div class="col col-md-4 img-fluid"><img src="images/services_01.png" width="100%" alt="services" /></div>
+            <div class="col col-md-4 img-fluid"><img src="images/services_02.png" width="100%" alt="services" /></div>
+            <div class="col col-md-4 img-fluid"><img src="images/services_03.png" width="100%" alt="services" /></div>
+          </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 me-0 pe-0 ms-0 ps-0">
         <div class="col">
           <div class="counters">
             <div class="counter">
@@ -178,15 +218,15 @@
   <!-- END ABOUT SECTION -->
   <!-- START SERVICE SECTION -->
   <section id="service-section" class="py-5">
-    <div class="row text-center">
-      <div class="col col-sm-10 offset-1 col-md-8 offset-md-2">
+    <div class="row text-center pt-4">
+      <div class="col col-sm-10 offset-sm-1 col-md-8 offset-md-2">
         <h3 class="header-subtitile">We work with</h3>
         <h2 class="mt-1 mb-4 text-uppercase">AMAZING SERVICES</h2>
         <img src="images/underLine_yellow.png" alt="lineThrough" class="d-block mx-auto" />
         <div class="row my-3">
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>PHOTOGRAPHY</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -196,7 +236,7 @@
           </div>
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>WEB DESIGN</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -206,7 +246,7 @@
           </div>
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>CREATIVITY</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -214,10 +254,10 @@
               </div>
             </div>
           </div>
-          <hr class="my-5" />
+          <hr class="my-5 d-sm-block d-none" />
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>SEO</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -227,7 +267,7 @@
           </div>
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>CSS/HTML</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -237,7 +277,7 @@
           </div>
           <div class="col">
             <div class="media mt-3">
-              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-md-2 m-sm-1" />
+              <img src="images/alarm.png" alt="Alarm" class="m-lg-4 m-2" />
               <div class="media-body text-start">
                 <h6>DIGITAL</h6>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -251,8 +291,8 @@
   </section>
   <!-- END SERVICE SECTION -->
   <!-- START BLOG SECTION -->
-  <section id="blog-section" class="pt-5 text-center">
-    <div class="row">
+  <section id="blog-section" class="pt-5">
+    <div class="row text-center pt-4">
       <div class="col">
         <h3 class="header-subtitile">For all devices</h3>
         <h2 class="mt-1 mb-4 text-uppercase">UNIQUE DESIGN</h2>
@@ -264,9 +304,9 @@
   </section>
   <!-- END BLOG SECTION -->
   <!-- START SERVICES SECTION -->
-  <section id="services-section" class="py-5 my-5">
+  <section id="services-section" class="pt-5 my-5">
     <div class="row text-center">
-      <div class="col col-md-8 offset-md-2 col-sm-10 offset-sm-1">
+      <div class="col col-xxl-8 offset-xxl-2 col-md-10 offset-md-1">
         <div class="row">
           <div class="col">
             <h3 class="header-subtitile">Service</h3>
@@ -361,11 +401,11 @@
     </div>
     <!-- SLIDER 1 -->
     <div class="row bg-light mt-5 py-5">
-      <div class="col col-md-8 offset-md-2">
+      <div class="col col-lg-8 offset-lg-2 col-md-10 offset-md-1">
         <div id="slider1" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class=" d-flex flex-row flex-nowrap align-items-center justify-content-center">
+              <div class="d-flex flex-row flex-nowrap align-items-center justify-content-center">
                 <div class="border border-2 p-3 me-5"><img src="images/speech.png" alt="first slide"></div>
               <p class="d-flex flex-column align-items-start">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -412,9 +452,9 @@
   </section>
   <!-- END SERVICES SECTION -->
   <!-- START CONTANT SECTION -->
-  <section id="contact-section">
-    <div class="row text-center">
-      <div class="col col-md-8 offset-md-2 col-sm-10 offset-sm-1">
+  <section id="contact-section" class="py-5">
+    <div class="row text-center pt-4">
+      <div class="col col-xxl-8 offset-xxl-2 col-md-10 offset-md-1">
         <h3 class="header-subtitile">Who we are</h3>
         <h2 class="mt-1 mb-4 text-uppercase">MEET OUR TEAM</h2>
         <img src="images/lineThrough-red.png" alt="lineThrough" class="d-block mx-auto" />
@@ -465,7 +505,7 @@
   <!-- START PORTFOLIO SECTION -->
   <section id="portfolio-section">
     <div class="row text-center py-5">
-      <div class="col col-md-8 offset-md-2 col-sm-10 offset-sm-1">
+      <div class="col col-xxl-8 offset-xxl-2 col-md-10 offset-md-1">
         <h3 class="header-subtitile">What we do</h3>
         <h2 class="mt-1 mb-4 text-uppercase">SOME OF OUR WORKS</h2>
         <img src="images/lineThrough-red.png" alt="lineThrough" class="d-block mx-auto" />
@@ -506,7 +546,7 @@
     </div>
     <!-- SLIDER 2 -->
     <div class="row bg-transparent my-5">
-      <div class="col col-md-8 offset-md-2">
+      <div class="col col-lg-8 offset-lg-2 col-md-10 offset-md-1">
         <div id="slider2" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -553,7 +593,7 @@
   <!-- START COMMENT SECTION -->
   <section id="comment-section">
     <div class="row text-center py-5">
-      <div class="col col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-lg-10 offset-lg-1">
+      <div class="col col-xxl-8 offset-xxl-2 col-md-10 offset-md-1 col-lg-10 offset-lg-1">
         <h3 class="header-subtitile">happy clients</h3>
         <h2 class="mt-1 mb-4 text-uppercase">what people say</h2>
         <img src="images/lineThrough-red.png" alt="lineThrough" class="d-block mx-auto" />
@@ -614,7 +654,7 @@
   <!-- START LATEST BLOG SECTION -->
   <section id="lblog-section">
     <div class="row text-center py-5">
-      <div class="col col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+      <div class="col col-md-10 offset-md-1 col-xxl-8 offset-xxl-2">
         <h3 class="header-subtitile">our stories</h3>
         <h2 class="mt-1 mb-4 text-uppercase">latest blog</h2>
         <img src="images/lineThrough-red.png" alt="lineThrough" class="d-block mx-auto" />
@@ -688,7 +728,7 @@
   <!-- START FOOTER SECTION -->
   <div id="footer-section">
     <div class="row py-5">
-      <div class="col col-sm-10 offset-sm-1 col-xl-8 offset-xl-2">
+      <div class="col col-md-10 offset-md-1 col-xxl-8 offset-xxl-2">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <p class="logo">MoGo</p>
